# datafeeder

./: .env  .env.example  .envs-database-georchestra  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  DOCKER_HUB.md  Dockerfile.airflow  Dockerfile.backend  Dockerfile.georchestra-database  INGESTION_REFACTOR.md  Makefile  README.md  VISION_TECHNIQUE_DU_TUNNEL_D_INGESTION.md  agents.md  docker-compose.yaml  georchestra-openapi.yaml  mkdocs.yml  mkdocs_requirements.txt  plan_prompt.md  pom.xml  pyproject.toml  pyrightconfig.json  release.properties  ruff.toml  test_permissions.sh
.agents/: mistakes-to-avoid.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/plans/: GSMEL-788-ogc-service-source-type.md  cosmic-splashing-origami.md  temporal-launching-narwhal.md
.claude/rules/: backend.md  code-style.md  frontend.md
.github/agents/: copilot-instructions.md
.github/prompts/: context.improve.prompt.md
.github/workflows/: backport.yml  build-airflow-trixie-image.yml  build-docker-images.yml  build.yaml  ci.yml  frontend-checks.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
apps/backend/: .coverage  .env.example  Dockerfile  README.md  alembic.ini  datafeeder.env  datakern.env  main.py  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_baseline.py  002_add_source_layer_protocol.py  002_empty_dataset_support.py  12856770e05b_replace_final_table_name_unique_with_.py  311bbeb94ed3_empty_dataset_support.py  a1b2c3d4e5f6_add_extra_config_to_integrity_link.py
apps/backend/src/: config.py  main.py
apps/backend/src/api/: deps.py  internal.py  main.py
apps/backend/src/api/routes/: airflow.py  callbacks.py  data_groups.py  files.py  geonetwork.py  groups_common.py  import_router.py  ingestion.py  internal_files.py  items.py  llm.py  metadata_groups.py  settings.py  utils.py
apps/backend/src/api/routes/ingestion/: empty_dataset.py  integrity_link.py  integrity_links.py  prefilled_dataset.py  process.py  recurrence.py  staging.py
apps/backend/src/core/: callback.py  config.py  constants.py  db.py  encryption.py  georchestraconfig.py  logging.py  paths.py  run_ids.py  security.py  task_executor.py
apps/backend/src/models/: __init__.py  data_import.py  integrity_link.py  integrity_link_rule.py  recurrence.py  user.py
apps/backend/src/plugins/: PropertiesConfigSettingsSource.py
apps/backend/src/services/: ai_service.py  airflow_client.py  airflow_logs.py  console_service.py  dataset_deletion_service.py  executor_factory.py  files.py  georchestra.py  geoserver.py  metadata_service.py  schedule_service.py  settings_service.py
apps/backend/src/services/executors/: __init__.py  airflow_executor.py
apps/backend/src/services/metadata/: metadata_19115_3_service.py  metadata_19139_service.py  metadata_patch_service.py
apps/backend/tests/api/routes/: test_data_groups.py  test_empty_dataset.py  test_endpoint_permissions.py  test_geonetwork.py  test_groups_common.py  test_integrity_link.py  test_integrity_links.py  test_metadata_groups.py  test_process.py  test_process_recurrence.py  test_recurrence_endpoints.py  test_staging_api.py  test_staging_database.py
apps/backend/tests/core/: test_config.py  test_run_ids.py  test_security.py
apps/backend/tests/models/: test_integrity_link.py
apps/backend/tests/services/: test_airflow_client.py  test_airflow_executor.py  test_airflow_logs.py  test_console_service.py  test_dataset_deletion_service.py  test_files.py  test_georchestra.py  test_geoserver.py  test_metadata_patch_service.py  test_metadata_service.py  test_settings_service.py
apps/elt/: README.md  pyproject.toml
apps/elt/airflow/config/: airflow.cfg
apps/elt/dags/: .airflowignore  callback.py  example_dag.py  final_dag.py  models.py  my_first_dag.py  process-dag-generator.py  process_dag.py  staging_dag.py  utils.py
apps/elt/dags/task_groups/: __init__.py  ingestion.py  transformation.py
apps/elt/dags/tests/: test_process_dag_generator.py  test_transformation_group.py
apps/elt/tmp/logs/: init.txt
apps/frontend/: .gitignore  .prettierignore  Dockerfile  README.md  angular.json  openapi.json  (+15 more)
docker/: .envs-ai.example  .envs-common  .envs-database-georchestra  .envs-hosts  Dockerfile.airflow  Dockerfile.georchestra-database  compose.ai.yaml  compose.airflow.yaml  compose.datafeeder.yaml  compose.datakern.yaml  compose.georchestra.yaml  data-db-init.sql  source-db-seed.sql
docs/: .readthedocs.yaml  index.en.md
e2e-tests/: .env.example  README.md  pyproject.toml  watch-worker-mem.sh
e2e-tests/tests/: common.py  test_import.py  test_import_credentials.py
frontend/: .gitignore  README.md  cypress.config.ts  nx.json  openapitools.json  package-lock.json  package.json  project.json  vite.config.mts
libs/ai/: pyproject.toml
libs/ai/src/ai/: __init__.py  metadata_generator.py  metadata_generator_models.py  tracing.py  utils.py
libs/ai/src/ai/prompts/: metadata_human.md  metadata_human.txt  metadata_system.md  metadata_system.txt  metadata_system_with_attributes.md
libs/ai/src/ai/providers/: __init__.py  llm.py  llm_factory.py
libs/ai/tests/: test_metadata_generator.py  test_utils.py
libs/data_manipulation/: README.md  pyproject.toml
libs/data_manipulation/src/data_manipulation/: __init__.py  arrow_reader.py  constants.py  database.py  encryption.py  geoserver.py  ingestion.py  logging.py  models.py  postgis_writer.py  test.py  type_detection.py  utils.py  validators.py
libs/data_manipulation/src/data_manipulation/transformation/: filter_sql.py  sql_transform.py  transform.py  transform_columns.py  transform_encoding.py  transform_geom_point.py  transform_projection.py  transform_sql.py
libs/data_manipulation/tests/: __init__.py  test_arrow_reader.py  test_column_actions.py  test_database.py  test_filter_sql.py  test_geoserver.py  test_ingestion.py  test_postgis_writer.py  test_transform_sql.py  test_transformation.py  test_type_detection.py  test_utils.py  test_validators.py
libs/data_manipulation/tests/bench/: test_streaming_rss.py
openspec/: config.yaml
(+536 files in other folders)
