[tool.poe.tasks]
clean = "uv clean"
install = "uv sync --all-packages"

lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

check= "pyright ."

[project]
name = "datakern-python-monorepo"
version = "0.1.0"
description = "Datakern python monorepo using uv"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "poethepoet>=0.38.0",
    "pyright>=1.1.407",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
required-version = ">=0.9.9"

[tool.uv.workspace]
members = [
    "apps/backend",
    "apps/elt",
    "libs/data_manipulation"
]
