[tool.poe.tasks]
clean = "uv clean"
install = "uv sync --all-packages"

lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

check= "pyright ."

[project]
name = "datafeeder-python-monorepo"
version = "2.0.0"
description = "Datafeeder python monorepo using uv"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "poethepoet>=0.38.0",
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "code-review-graph>=1.8.4",
]

[tool.uv]
# Source of truth for the uv version. Keep in sync with the UV_VERSION ARG
# default in apps/backend/Dockerfile and docker/Dockerfile.airflow.
required-version = "==0.9.15"

[tool.uv.sources]
geoservercloud = { git = "https://github.com/camptocamp/python-geoservercloud.git" }
geonetwork = { git = "https://github.com/camptocamp/python-geonetwork.git" }

[tool.uv.workspace]
members = [
    "apps/backend",
    "libs/data_manipulation"
]
# apps/elt resolves independently (own uv.lock) because apache-airflow caps
# fastapi below the version the backend pins. See apps/elt/pyproject.toml.
