[project]
name = "datafeeder-e2e-tests"
version = "0.1.0"
description = "Playwright e2e tests for datafeeder"
requires-python = "==3.12.*"
dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "--headed --base-url=http://localhost:8080"
