[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

check= "pyright ."

[project]
name = "datafeeder-backend"
version = "0.1.0"
description = "REST API for data ingestion in Datafeeder"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]==0.117.0",
    "uvicorn[standard]==0.38.0",
    "data_manipulation",
    "sqlmodel==0.0.27",
    "pyjwt==2.12.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "jproperties==2.1.2",
    "psycopg[binary]==3.3.2",
    "geoservercloud",
    "geonetwork",
    "apache-airflow-client==3.1.3",
    "geojson-pydantic>=1.0.0",
    "chardet>=5.2.0",
]

[dependency-groups]
dev = [
    "ruff>0",
    "poethepoet>0",
    "pyright>0",
    "pytest>0",
    "pytest-asyncio>0",
    "pytest-cov>0",
    "types-lxml>=2025.11.25",
]

[tool.uv.sources]
data_manipulation = { workspace = true }
geoservercloud = { git = "https://github.com/camptocamp/python-geoservercloud.git" }
geonetwork = { git = "https://github.com/camptocamp/python-geonetwork.git" }

[tool.ruff]
extend = "../../ruff.toml"

[tool.pyright]
extends = "../../pyrightconfig.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
