[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

check= "pyright ."

"db:upgrade" = "alembic upgrade head"
"db:check" = "alembic check"

[project]
name = "datafeeder-backend"
version = "0.1.0"
description = "REST API for data ingestion in Datafeeder"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]==0.136.1",
    "uvicorn[standard]==0.46.0",
    "data_manipulation",
    "sqlmodel==0.0.38",
    "pyjwt==2.12.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "jproperties==2.1.2",
    "psycopg[binary]==3.3.4",
    "geoservercloud",
    "geonetwork",
    "apache-airflow-client==3.1.8",
    "geojson-pydantic==2.1.1",
    "chardet==7.4.3",
    "requests==2.33.1",
    "alembic==1.18.4",
]

[dependency-groups]
dev = [
    "ruff>0",
    "poethepoet>0",
    "pyright>0",
    "pytest>0",
    "pytest-asyncio>0",
    "pytest-cov>0",
    "types-lxml>=2025.11.25",
]

[tool.uv.sources]
data_manipulation = { workspace = true }

[tool.ruff]
extend = "../../ruff.toml"

[tool.pyright]
extends = "../../pyrightconfig.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
