[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

[project]
name = "datakern-airflow-elt"
version = "0.1.0"
description = "Airflow DAGs for ELT in DataKern"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "data_manipulation",
    "apache-airflow==3.1.6",
    "apache-airflow-providers-postgres==6.5.0",
]

[dependency-groups]
dev = [
    "ruff>0",
    "poethepoet>0",
]

[tool.uv.sources]
data_manipulation = { workspace = true }

[tool.ruff]
extend = "../../ruff.toml"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["dags"]
