[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

[project]
name = "datafeeder-airflow-elt"
version = "0.1.0"
description = "Airflow DAGs for ELT in Datafeeder"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "data_manipulation",
    "apache-airflow==3.1.8",  # keep in sync with AIRFLOW_VERSION in docker/Dockerfile.airflow
    "apache-airflow-providers-postgres==6.6.3",
    "apache-airflow-providers-fab==3.6.4", # https://github.com/apache/airflow/pull/62919 explicit dependency to be removed when upgrading to airflow 3.2.x
]

[dependency-groups]
dev = [
    "ruff>0",
    "poethepoet>0",
]

[tool.uv.workspace]
members = ["../../libs/data_manipulation"]

[tool.uv.sources]
data_manipulation = { workspace = true }
geoservercloud = { git = "https://github.com/camptocamp/python-geoservercloud.git" }

[tool.ruff]
extend = "../../ruff.toml"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["dags"]
