[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

check = "pyright ."

[project]
name = "ai"
version = "0.1.0"
description = "AI/LLM utilities for Datafeeder (metadata generation, etc.)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",   # default provider; always installed
    "pydantic>=2.0",
]

[project.optional-dependencies]
ollama  = ["langchain-ollama>=0.3"]
mistral = ["langchain-mistralai>=0.2"]
phoenix = [
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-langchain>=0.1",
]

[dependency-groups]
dev = [
    "ruff>0",
    "poethepoet>0",
    "pyright>0",
    "pytest>0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai"]

[tool.ruff]
extend = "../../ruff.toml"

[tool.pyright]
extends = "../../pyrightconfig.json"
