[tool.poe.tasks]
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"

fmt = "ruff format . --check"
"fmt:fix" = "ruff format ."

check= "pyright ."

[project]
name = "data_manipulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"

# These deps reach the Airflow image via `uv export` from apps/elt/uv.lock;
# re-lock apps/elt after changing them.
dependencies = [
    "adbc-driver-postgresql==1.11.0",
    "chardet==7.4.3",
    "geoalchemy2==0.19.0",
    "geoservercloud",
    "pyarrow==24.0.0",
    "pydantic==2.13.4",
    "pyogrio==0.12.1",
    "pyproj==3.7.2",
    "sqlalchemy==2.0.49",
]

[dependency-groups]
dev = [
    "geopandas==1.1.3",
    "ruff>0",
    "poethepoet>0",
    "pyright>0",
    "pytest>0",
]

[tool.ruff]
extend = "../../ruff.toml"

[tool.pyright]
extends = "../../pyrightconfig.json"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
